@@ -310,8 +310,8 @@ public final class CJKTokenizer extends Tokenizer {
     }
     
     @Override
-    public void reset(Reader reader) throws IOException {
-      super.reset(reader);
+    public void setReader(Reader reader) throws IOException {
+      super.setReader(reader);
       reset();
     }
 }
