@@ -168,8 +168,8 @@ public final class ChineseTokenizer extends Tokenizer {
     }
     
     @Override
-    public void reset(Reader input) throws IOException {
-      super.reset(input);
+    public void setReader(Reader input) throws IOException {
+      super.setReader(input);
       reset();
     }
 }
