@@ -245,8 +245,8 @@ public final class JapaneseTokenizer extends Tokenizer {
   }
 
   @Override
-  public void reset(Reader input) throws IOException {
-    super.reset(input);
+  public void setReader(Reader input) throws IOException {
+    super.setReader(input);
     buffer.reset(input);
   }
 
